[package]
name = "openbrush_lang_macro"
version= "4.0.0-beta.1"
authors = ["Brushfam <green@727.ventures>"]
edition = "2021"

license = "MIT"
repository = "https://github.com/Brushfam/openbrush-contracts"
documentation = "https://learn.brushfam.io/docs/openbrush"
homepage = "https://brushfam.io/"
description = "OpenBrush macros to extend functionality of the ink!."
keywords = ["wasm", "brushfam", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
openbrush_lang_codegen = { version = "~4.0.0-beta.1", path = "../codegen", default-features = false }
syn = "2.0.101"
proc-macro2 = "1.0.95"
synstructure = "0.13.2"

[dev-dependencies]
ink = { version = "5.1.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

openbrush = { package = "openbrush_lang", path = "..", default-features = false }

[lib]
name = "openbrush_lang_macro"
path = "src/lib.rs"
proc-macro = true

[features]
default = ["std"]
std = [
    "openbrush_lang_codegen/std",
]